--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root@!123
 spring.datasource.url=jdbc:mysql://localhost:3306/DataBaseProjetoEcommerce2?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 
